[gd_scene load_steps=4 format=3 uid="uid://cqrqpurv7hlpc"]

[ext_resource type="Script" uid="uid://daeq1mg3l8kkm" path="res://scripts/bus/bus.gd" id="1_kksej"]
[ext_resource type="Texture2D" uid="uid://xnwqfwa675tb" path="res://assets/bus_stop/1x/Bus.png" id="2_kksej"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_stnsb"]
size = Vector2(1585.5, 265)

[node name="Bus" type="Area2D" groups=["bus"]]
script = ExtResource("1_kksej")
stop_time = 0.8
metadata/_edit_horizontal_guides_ = [185.0]
metadata/_edit_vertical_guides_ = [209.0]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-717.25, 140.5)
shape = SubResource("RectangleShape2D_stnsb")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_kksej")

[node name="BoardingPosition" type="Marker2D" parent="."]
position = Vector2(31, 61)

[node name="SittingPosition" type="Marker2D" parent="."]
position = Vector2(561, 64)

[node name="LineLabel" type="Label" parent="."]
offset_left = -369.0
offset_top = -34.0
offset_right = -146.0
offset_bottom = 119.0

[node name="DirectionLabel" type="Label" parent="."]
offset_left = -370.0
offset_top = 127.0
offset_right = -141.0
offset_bottom = 193.0
